# volby_sim

./: LICENCE  README.md  setup.cfg  simulace_volby.ipynb
volby/: __init__.py  calc.py  utils.py
