[metadata]
# replace with your username:
name = volby
version = 0.0.1
author = Jan Schubert
description = Simulates allocation of seats in CZ elections
long_description = file: README.md
long_description_content_type = markdown
url = https://github.com/schubertjan/volby_sim
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8.5
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6